--- a/galeri.html
+++ b/galeri.html
@@ -373,9 +373,9 @@
         <ul>
             <li><a href="index.html">Beranda</a></li>
             <li><a href="layanan.html">Layanan</a></li>
-            <li><a href="#">Barbers</a></li>
+            <li><a href="barber.html">Barbers</a></li>
             <li><a href="galeri.html" class="active">Galeri Foto</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="blog.html">Blog</a></li>
         </ul>
         <a href="#" class="btn">Booking Now</a>
     </nav>
@@ -485,9 +485,9 @@
                 <ul>
                     <li><a href="index.html">Beranda</a></li>
                     <li><a href="layanan.html">Layanan</a></li>
-                    <li><a href="#">Barbers</a></li>
+                    <li><a href="barber.html">Barbers</a></li>
                     <li><a href="galeri.html">Galeri Foto</a></li>
-                    <li><a href="#">Artikel / Blog</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                 </ul>
             </div>
 
